force-app/main/default/objects/CommissionPeriod__c.object
<CustomObject>
    <description>This represents the commission periods past and present.  Active period controls values loaded to commission module during main processing timeperiod.</description>
    <fields>
        <fullName>Commission_Year_End__c</fullName>
        <label>Commission Year End</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commission_Year_Start__c</fullName>
        <label>Commission Year Start</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dateEnd__c</fullName>
        <inlineHelpText>Date Period ENds</inlineHelpText>
        <label>Date End</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dateStart__c</fullName>
        <inlineHelpText>Date Period Starts</inlineHelpText>
        <label>Date Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Shows whether the commission period is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Commission Period</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>isActive__c</columns>
        <columns>dateStart__c</columns>
        <columns>dateEnd__c</columns>
        <columns>Commission_Year_Start__c</columns>
        <columns>Commission_Year_End__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Commission Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commission Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Start_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>dateEnd__c &lt; dateStart__c</errorConditionFormula>
        <errorMessage>Start date should be less than End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Year_Start_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Commission_Year_End__c &lt; Commission_Year_Start__c</errorConditionFormula>
        <errorMessage>Commission Year Start date should be less than Commission Year End date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Year_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>OR( Commission_Year_Start__c  &gt;   dateStart__c , Commission_Year_End__c &lt;  dateEnd__c ,  Commission_Year_End__c &lt;  Commission_Year_Start__c , dateEnd__c &lt;  dateStart__c )</errorConditionFormula>
        <errorMessage>The selected dates are not valid</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Year_vs_Period</fullName>
        <active>true</active>
        <errorConditionFormula>OR( Commission_Year_Start__c &gt; dateStart__c , Commission_Year_End__c &lt; dateEnd__c)</errorConditionFormula>
        <errorMessage>Period  date must lie in Commission Year</errorMessage>
    </validationRules>
</CustomObject>